Integrate proper linear geometry methods and add some assets for gun tracking.
- Move app.js to hllwtml5.js.

- Add hllwtml5.animation.

- Add assets for gun and crosshair.

- Update styling.

--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>HallowTML5</title>
         <link href="css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
 
-        <!-- <script src="js/app.min.js" type="text/javascript" charset="utf-8" async defer></script> -->
+        <title>HallowTML5</title>
+
 
         <script src="../closure/goog/base.js" type="text/javascript" charset="utf-8"></script>
         <script src="js/move.js" type="text/javascript" charset="utf-8"></script>
-        <script src="js/app.js" type="text/javascript" charset="utf-8"></script>
+        <script src="js/animation.js" type="text/javascript" charset="utf-8"></script>
+        <script src="js/hllwtml5.js" type="text/javascript" charset="utf-8"></script>
+        <!-- <script src="js/hllwtml5.min.js" type="text/javascript" charset="utf-8"></script> -->
     </head>
     <body onload="hllwtml5.init()">
+        <div id="gun"></div>
+        <div id="crosshair"></div>
         <div id="guy"></div>
         <div id="ghost-guy"></div>
         <div class="bat"></div>
