--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
 
         <title>HallowTML5</title>
 
-
         <script src="../closure/goog/base.js" type="text/javascript" charset="utf-8"></script>
         <script src="js/move.js" type="text/javascript" charset="utf-8"></script>
         <script src="js/animation.js" type="text/javascript" charset="utf-8"></script>
         <script src="js/hllwtml5.js" type="text/javascript" charset="utf-8"></script>
-        <!-- <script src="js/hllwtml5.min.js" type="text/javascript" charset="utf-8"></script> -->
+
+        <!-- <script src="js/hllwtml5.min.js" type="text/javascript" charset="utf-8" async defer></script> -->
     </head>
     <body onload="hllwtml5.init()">
         <div id="gun"></div>
