Refactor gun functions into their own package.

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
         <script src="../closure/goog/base.js" type="text/javascript" charset="utf-8"></script>
         <script src="js/move.js" type="text/javascript" charset="utf-8"></script>
         <script src="js/animation.js" type="text/javascript" charset="utf-8"></script>
+        <script src="js/gun.js" type="text/javascript" charset="utf-8"></script>
         <script src="js/hllwtml5.js" type="text/javascript" charset="utf-8"></script>
 
         <!-- <script src="js/hllwtml5.min.js" type="text/javascript" charset="utf-8" async defer></script> -->
