Start basic hit detection.  Problem with CSS3 transforms and offet location right now.

--- a/public/index.html
+++ b/public/index.html
@@ -16,19 +16,19 @@
     <body onload="hllwtml5.init()">
         <div id="gun"></div>
         <div id="crosshair"></div>
-        <div id="guy"></div>
+        <div id="guy" class="enemy"></div>
         <div id="ghost-guy"></div>
-        <div class="bat"></div>
-        <div class="bat"></div>
-        <div class="bat"></div>
-        <div class="bat"></div>
-        <div class="bat"></div>
-        <div class="bat"></div>
-        <div class="bat"></div>
-        <div class="bat"></div>
-        <div class="bat"></div>
-        <div class="bat"></div>
-        <div class="bat"></div>
-        <div class="bat"></div>
+        <div class="bat enemy"></div>
+        <div class="bat enemy"></div>
+        <div class="bat enemy"></div>
+        <div class="bat enemy"></div>
+        <div class="bat enemy"></div>
+        <div class="bat enemy"></div>
+        <div class="bat enemy"></div>
+        <div class="bat enemy"></div>
+        <div class="bat enemy"></div>
+        <div class="bat enemy"></div>
+        <div class="bat enemy"></div>
+        <div class="bat enemy"></div>
     </body>
 </html>
