--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,31 @@
         <script src="../closure/goog/base.js" type="text/javascript" charset="utf-8"></script>
         <script src="js/move.js" type="text/javascript" charset="utf-8"></script>
         <script src="js/animation.js" type="text/javascript" charset="utf-8"></script>
+        <script src="js/hud.js" type="text/javascript" charset="utf-8"></script>
         <script src="js/gun.js" type="text/javascript" charset="utf-8"></script>
         <script src="js/hllwtml5.js" type="text/javascript" charset="utf-8"></script>
 
         <!-- <script src="js/hllwtml5.min.js" type="text/javascript" charset="utf-8" async defer></script> -->
     </head>
     <body onload="hllwtml5.init()">
+        <div id="hud">
+            <table>
+                <tbody>
+                    <tr>
+                        <td>Rounds Fired</td>
+                        <td id="rounds"></td>
+                    </tr>
+                    <tr>
+                        <td>Enemies Killed</td>
+                        <td id="enemies_killed"></td>
+                    </tr>
+                    <tr>
+                        <td>Accuracy</td>
+                        <td id="accuracy"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
         <div id="gun"></div>
         <div id="crosshair"></div>
         <div id="guy" class="enemy"></div>
