Use pubsub for hud updating.  Cleanup.

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,10 @@
         <script src="js/gun.js" type="text/javascript" charset="utf-8"></script>
         <script src="js/hllwtml5.js" type="text/javascript" charset="utf-8"></script>
 
-        <!-- <script src="js/hllwtml5.min.js" type="text/javascript" charset="utf-8" async defer></script> -->
+        <!--
+        <script src="js/move.min.js" type="text/javascript" charset="utf-8" async defer></script>
+        <script src="js/hllwtml5.min.js" type="text/javascript" charset="utf-8" async defer></script>
+        -->
     </head>
     <body onload="hllwtml5.init()">
         <div id="hud">
