Refactor JS into a few more modules.  Remove proprietary graphical assets.  Break up SASS into a few more files.

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href='http://fonts.googleapis.com/css?family=Wallpoet' rel='stylesheet' type='text/css'>
         <link href="css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
 
         <title>HallowTML5</title>
 
         <script src="../closure/goog/base.js" type="text/javascript" charset="utf-8"></script>
         <script src="js/move.js" type="text/javascript" charset="utf-8"></script>
+        <script src="js/common.js" type="text/javascript" charset="utf-8"></script>
         <script src="js/animation.js" type="text/javascript" charset="utf-8"></script>
+        <script src="js/zombie.js" type="text/javascript" charset="utf-8"></script>
         <script src="js/hud.js" type="text/javascript" charset="utf-8"></script>
         <script src="js/gun.js" type="text/javascript" charset="utf-8"></script>
         <script src="js/hllwtml5.js" type="text/javascript" charset="utf-8"></script>
@@ -38,9 +41,7 @@
         </div>
         <div id="gun"></div>
         <div id="crosshair"></div>
-        <div id="guy" class="enemy"></div>
-        <div id="ghost-guy"></div>
-        <div class="bat enemy"></div>
+        <!-- <div id="zombie" class="enemy"></div> -->
         <div class="bat enemy"></div>
         <div class="bat enemy"></div>
         <div class="bat enemy"></div>
