First hack at some 3D stuff.

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
         <title>HallowTML5</title>
 
         <script src="../closure/goog/base.js" type="text/javascript" charset="utf-8"></script>
+        <script src="js/CubicVR.js" type="text/javascript" charset="utf-8" async defer></script>
         <script src="js/move.js" type="text/javascript" charset="utf-8"></script>
         <script src="js/common.js" type="text/javascript" charset="utf-8"></script>
         <script src="js/animation.js" type="text/javascript" charset="utf-8"></script>
@@ -19,6 +20,7 @@
         <script src="js/hllwtml5.js" type="text/javascript" charset="utf-8"></script>
 
         <!--
+        <script src="js/CubicVR.min.js" type="text/javascript" charset="utf-8" async defer></script>
         <script src="js/move.min.js" type="text/javascript" charset="utf-8" async defer></script>
         <script src="js/hllwtml5.min.js" type="text/javascript" charset="utf-8" async defer></script>
         -->
