Moar bats. Add enemies remaining count.  Make bats bigger.

--- a/public/index.html
+++ b/public/index.html
@@ -36,8 +36,17 @@
                         <td id="enemies_killed"></td>
                     </tr>
                     <tr>
+                        <td>Enemies Remaining</td>
+                        <td id="enemies_remaining"></td>
+                    </tr>
+                    <tr>
                         <td>Accuracy</td>
                         <td id="accuracy"></td>
+                    </tr>
+                    <tr>
+                        <td>
+                            Click 'n' hold to fire!
+                        </td>
                     </tr>
                 </tbody>
             </table>
@@ -45,6 +54,15 @@
         <div id="gun"></div>
         <div id="crosshair"></div>
         <!-- <div id="zombie" class="enemy"></div> -->
+        <div class="bat enemy"></div>
+        <div class="bat enemy"></div>
+        <div class="bat enemy"></div>
+        <div class="bat enemy"></div>
+        <div class="bat enemy"></div>
+        <div class="bat enemy"></div>
+        <div class="bat enemy"></div>
+        <div class="bat enemy"></div>
+        <div class="bat enemy"></div>
         <div class="bat enemy"></div>
         <div class="bat enemy"></div>
         <div class="bat enemy"></div>
