Add dev HTML and refactor index to be prod.

--- a/public/dev.html
+++ b/public/dev.html
@@ -9,19 +9,14 @@
 
         <title>HallowTML5</title>
 
-        <script type="text/javascript">
-            var _gaq = _gaq || [];
-            _gaq.push(['_setAccount', 'UA-6792176-2']);
-            _gaq.push(['_trackPageview']);
-
-            (function() {
-              var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-              ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-              var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-            })();
-        </script>
-        <script src="js/move.min.js" type="text/javascript" charset="utf-8" async defer></script>
-        <script src="js/hllwtml5.min.js" type="text/javascript" charset="utf-8" async defer></script>
+        <script src="../closure/goog/base.js" type="text/javascript" charset="utf-8"></script>
+        <script src="js/move.js" type="text/javascript" charset="utf-8"></script>
+        <script src="js/common.js" type="text/javascript" charset="utf-8"></script>
+        <script src="js/animation.js" type="text/javascript" charset="utf-8"></script>
+        <script src="js/zombie.js" type="text/javascript" charset="utf-8"></script>
+        <script src="js/hud.js" type="text/javascript" charset="utf-8"></script>
+        <script src="js/gun.js" type="text/javascript" charset="utf-8"></script>
+        <script src="js/hllwtml5.js" type="text/javascript" charset="utf-8"></script>
     </head>
     <body onload="hllwtml5.init()">
         <div id="hud">
